<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="30dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/whiteBackground"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:textSize="16sp"
            android:text="@string/light"
            android:textColor="@color/textColor"
            android:id="@+id/light_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/light_theme"
            />
        <RadioButton
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/light_theme"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            app:layout_constraintTop_toTopOf="@id/darK_theme"
            android:textSize="16sp"
            android:text="@string/dark"
            android:textColor="@color/textColor"
            android:id="@+id/dark_text"
            app:layout_constraintTop_toBottomOf="@id/light_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/darK_theme"
            />
        <RadioButton
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/darK_theme"
            app:layout_constraintTop_toBottomOf="@id/light_theme"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            app:layout_constraintTop_toTopOf="@id/follow_system"
            android:textSize="16sp"
            android:text="@string/follow_system"
            android:textColor="@color/textColor"
            android:id="@+id/follow_system_text"
            app:layout_constraintTop_toBottomOf="@id/dark_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/follow_system"
            />
        <RadioButton
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/follow_system"
            app:layout_constraintTop_toBottomOf="@id/darK_theme"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            app:layout_constraintTop_toTopOf="@id/auto"
            android:textSize="16sp"
            android:text="@string/auto_day_night"
            android:textColor="@color/textColor"
            android:id="@+id/auto_text"
            app:layout_constraintTop_toBottomOf="@id/follow_system_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/auto"
            />
        <RadioButton
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/auto"
            app:layout_constraintTop_toBottomOf="@id/follow_system"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>