<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0"
    android:animateLayoutChanges="true"
    android:background="@drawable/map_bootom_sheet_back"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:fadingEdge="vertical"
    android:fadingEdgeLength="50dp"
    android:overScrollMode="always"
    android:paddingHorizontal="10dp"
    android:requiresFadingEdge="vertical"
    app:roundTopCorners="true"
    tools:targetApi="lollipop"
    tools:viewBindingIgnore="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:visibility="gone"
            android:id="@+id/no_connection_layout"
            ads:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="300dp">
            <ImageView
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/refresh_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/icon_refresh"/>

            <ImageView
                android:id="@+id/no_internet"
                android:src="@drawable/icon_no_connection"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>
            <TextView
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ads:layout_constraintTop_toBottomOf="@id/no_internet"
                ads:layout_constraintStart_toStartOf="parent"
                android:textSize="16sp"
                android:textColor="@color/highlightTextColor"
                ads:layout_constraintEnd_toEndOf="parent"
                android:text="@string/no_internet_connection_available"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/info_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/location_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="@color/textColor"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/location_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/secondaryTextColor"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/coordinate_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coordinate"
                android:textColor="@color/textColor"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/coordinate_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/secondaryTextColor"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/address_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coordinate_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/textColor"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/address_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/secondaryTextColor"
                android:textSize="16sp" />
        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            ads:adSize="BANNER"
            app:adUnitId="@string/unit_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>